apps/umami/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  labels:
    app: umami
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      serviceAccountName: umami
      containers:
        - name: umami
          image: "ghcr.io/umami-software/umami:3.4.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
          securityContext:
            runAsGroup: 65533
            runAsNonRoot: true
            runAsUser: 1001
