apps/umami/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  labels:
    app: umami
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: umami
