apps/umami/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  namespace: analytics
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overtime-contingency.xetera.dev`)
      priority: 10
      services:
        - name: umami
          port: 3000
      middlewares:
        - name: ingress-cloudflare-only@kubernetescrd
  tls:
    options:
      name: ingress-cloudflare-mtls@kubernetescrd
    secretName: cloudflare-origin-xetera-dev
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami-proxied
  namespace: analytics
spec:
  entryPoints:
    - websecure
  routes:
    - match: Header(`X-Route`, `analytics`)
      priority: 5
      services:
        - name: umami
          port: 3000
      middlewares:
        - name: ingress-cloudflare-only@kubernetescrd
  tls:
    secretName: cloudflare-origin-analytics
